feat: criação do projeto base da home page com html semântico.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,82 @@
     <title>Sorvete Fitness</title>
 </head>
 <body>
-    <h1>Sorvete Fitness</h1>
+
+    <header>
+        <nav>
+            <a href="#"><p>Seja um revendedor</p></a>
+            <a href="#"><img src="#" alt="Logo marca sorvete fitness"></a>
+        </nav>
+        <div>
+            <input type="text" name="#" id="#">
+        </div>
+        <div>
+            <p>Login</p>
+            <p>Carrinho</p>
+        </div>
+    </header>
+    <main>
+        <section class="main__img">
+            <img src="#" alt="Imagem principal">
+        </section>
+        <section class="section__products">
+            <p class="motivation__msg"></p>
+            <section class="products__presentation">
+                <img src="#" alt="apresentação de produtos">
+            </section>
+            <section class="products__price">
+                <img src="#" alt="produtos com preço">
+            </section>
+            <section class="products_price_relief">
+                <img src="#" alt="produtos com preço em destaque">
+            </section>
+            <section class="motivation__img">
+                <div class="motivation__img__1">
+                    <img src="#" alt="Imagem motivacional 1">
+                </div>
+                <div class="motivation__img__2">
+                    <img src="#" alt="Imagem motivacional 2">
+                </div>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <div class="footer__description">
+            <div>
+                <div>
+                    <img src="#" alt="logomarca da sorvete fitness">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">Instagram</a></li>
+                        <li><a href="">Youtube</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt deleniti est delectus eos in, modi reprehenderit blanditiis inventore accusantium harum illum, neque dolorem placeat? Odio, nam minima! Rem, at laudantium.
+                </p>
+            </div>
+        </div>
+        <div class="footer__about">
+            <div class="about__sorvete__fitness">
+                <img src="#" alt="logomarca da sorvete fitness">
+                <p>Sobre a</p>
+                <p>Sorvete fitness</p>
+            </div>
+            <div class="img__worldCocoaFoundation">
+                <img src="#" alt="">
+            </div>
+            <div>
+                <p>Todos os direitos reservados</p>
+            </div>
+            <div>
+                <p>FAQ</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
