--- a/src/pages/Reseller/beareseller.html
+++ b/src/pages/Reseller/beareseller.html
@@ -9,9 +9,10 @@
 <body>
     <header>
         <nav>
-            <div>
-                <img src="#" alt="logomarca da sorvete fitness">
-            </div>
+            <figure>
+                <a href="../../../index.html"><img src="#" alt="logomarca da sorvete fitness"></a>
+                
+            </figure>
             <div>
                 <p>Sou revendedor</p>
             </div>
@@ -23,82 +24,87 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="section__advantages">
             <h2>Vantagens <span>exclusivas</span> para Revendedores</h2>
-            <div>
-                <img src="#" alt="Cifrão">
-                <h3>Margem de Lucro</h3>
-                <p>Seu lucro mínimo é de 15% podendo chegar até 25%.</p>
-            </div>
-            <div>
-                <img src="#" alt="Cifrão 2">
-                <h3>Margem Extra</h3>
-                <p>Resgate no mês seguinte 10%* do valor das suas compras em chocolates.</p>
-            </div>
-            <div>
-                <img src="#" alt="Medalha">
-                <h3>Incentivos</h3>
-                <p>Plataforma onde suas compras valem pontos para concorrer a prêmio incríveis nos Rankings durante todo o ano.</p>
-            </div>
-        <section>
-        <section>
-            <h2>Tocamos a sua vida através de...</h2>
-            <div>
-                <h3>Marca forte</h3>
-                <p>A Sorvete Fitness é uma marca consolidada com produtos líderes e de grande destaque.</p>
-                <img src="#" alt="">
-            </div>
-            <div>
-                <h3>Variedade de produtos</h3>
-                <p>Todo mundo ama chocolate. Por isso, temos delícias para diferentes idades, gostos e faixas de preços.</p>
-                <img src="#" alt="">
-            </div>
-            <div>
-                <h3>Venda garantida</h3>
-                <p>Nossos produtos fazem sucesso e são consumidos rapidamente. Em pouco tempo seu cliente vai estar de volta para novas compras.</p>
-                <img src="#" alt="">
-            </div>
-            <div>
-                <h3>Novidades sempre</h3>
-                <p>A Cacau Show sempre está recheada de lançamentos, seu cliente sempre terá novas opções para consumir cada vez mais.</p>
-                <img src="#" alt="">
-            </div>
-            <div>
-                <h3>Maior do mundo</h3>
-                <p>Ser um revendedor Cacau Show é fazer parte da maior rede de chocolates finos do mundo com vantagens que só uma marca referência pode ter.</p>
-                <img src="#" alt="">
-            </div>
+            <ul class="ul__advantages">
+                <li class="li__advantage__1">
+                    <img src="#" alt="Cifrão">
+                    <h3 class="title">Margem de Lucro</h3>
+                    <p class="description">Seu lucro mínimo é de 15% podendo chegar até 25%.</p>
+                </li>
+                <li class="li__advantage__2">
+                    <img src="#" alt="Cifrão 2">
+                    <h3 class="title">Margem Extra</h3>
+                    <p class="description">Resgate no mês seguinte 10%* do valor das suas compras em chocolates.</p>
+                </li>
+                <li class="li__advantage__3">
+                    <img src="#" alt="Medalha">
+                    <h3 class="title">Incentivos</h3>
+                    <p class="description">Plataforma onde suas compras valem pontos para concorrer a prêmio incríveis nos Rankings durante todo o ano.</p>
+                </li>
+            </ul>
         </section>
-        <section>
+        <section class="section__motivations">
+            <h2>Transformando sua vida com...</h2>
+            <article>
+                <h3 class="title">Marca reconhecida</h3>
+                <p class="description">A Sorvete Fitness é uma marca consolidada, oferecendo produtos de qualidade e destaque, feitos com ingredientes naturais.</p>
+                <img src="#" alt="Marca reconhecida">
+            </article>
+            <article>
+                <h3 class="title">Variedade de sabores</h3>
+                <p class="description">Oferecemos uma ampla variedade de sabores deliciosos para pessoas com diabetes, colesterol alto e hábitos saudáveis, todos feitos com frutas brasileiras e ingredientes naturais.</p>
+                <img src="#" alt="Variedade de produtos">
+            </article>
+            <article>
+                <h3 class="title">Popularidade crescente</h3>
+                <p class="description">Nossos sorvetes são amados e consumidos rapidamente pelos clientes que buscam opções saudáveis e saborosas, garantindo um retorno rápido e frequente.</p>
+                <img src="#" alt="Venda garantida">
+            </article>
+            <article>
+                <h3 class="title">Inovação constante</h3>
+                <p class="description">Estamos sempre trazendo novidades frescas e saborosas, mantendo nossos clientes sempre animados com novas opções saudáveis e deliciosas.</p>
+                <img src="#" alt="Novidades sempre">
+            </article>
+            <article>
+                <h3 class="title">Destaque no mercado</h3>
+                <p class="description">Ser um revendedor Sorvete Fitness é fazer parte de uma rede em ascensão, oferecendo vantagens exclusivas e se destacando como uma referência em sorvetes saudáveis no mercado.</p>
+                <img src="#" alt="Maior do mundo">
+            </article>
+        </section>
+        <section class="section__register">
             <h3>Inicie seu cadastro</h3>
-            <form class="form__signup" action="">
-                <div class="card__input">
-                    <label for="">Nome completo</label>
-                    <input type="text" name="name" id="name" placeholder="Digite seu nome">
+            <form>
+            <fieldset>
+                <div>
+                    <label for="name">Nome completo</label>
+                    <input type="text" id="name" name="name" placeholder="Digite seu nome">
                 </div>
-                <div class="card__input">
-                    <label for="">Data de nascimento</label>
-                    <input type="text" name="birthdate" id="birthdate" placeholder="dd/mm/aaaa">
+                <div>
+                    <label for="birthdate">Data de nascimento</label>
+                    <input type="text" id="birthdate" name="birthdate" placeholder="dd/mm/aaaa">
                 </div>
-                <div class="card__input">
-                    <label for="">CPF</label>
-                    <input type="text" name="bothdate" id="bothdate" placeholder="XXX.XXX.XXX-XX">
+                <div>
+                    <label for="cpf">CPF</label>
+                    <input type="text" id="cpf" name="cpf" placeholder="XXX.XXX.XXX-XX">
                 </div>
-                <div class="card__input__radio">
-                    <label for="">Gênero</label>
-                    <div class="opcao">
-                        <input type="radio" value="Masculino" name="genero">
-                        <label for="Masculino">Masculino </label>
-                    </div>
-                    <div class="opcao">
-                        <input type="radio" value="Feminino" name="genero">
-                        <label for="Masculino">Feminino</label>
-                    </div>
-                    <div class="opcao">
-                        <input type="radio" value="Prefiro não responder" name="genero">
-                        <label for="Masculino">Prefiro não responder</label>
-                    </div>
+                <div class="gender">                   
+                        <h3>Gênero</h3>
+                        <div>
+                            <label for="masculino">Masculino</label>
+                            <input type="radio" id="masculino" name="genero" value="Masculino">                            
+                        </div>
+                        <div>
+                            <label for="feminino">Feminino</label>
+                            <input type="radio" id="feminino" name="genero" value="Feminino">                            
+                        </div>
+                        <div>
+                            <label for="nao-responder">Prefiro não responder</label>
+                            <input type="radio" id="nao-responder" name="genero" value="Prefiro não responder">
+                        </div>
+                        <button type="submit">Registrar Cadastro</button>
                 </div>
+            </fieldset>
             </form>
         </section>
     </main>
