--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" >
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="./src/assets/images/css-icon/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <script src="main.js" defer></script>
     <title>Sorvete Fitness</title>
 </head>
@@ -24,7 +26,7 @@
             </div>
             <div id="car-login">
                 <div>
-                    <i class="fa fa-address-book-o"></i>
+                    <i class="fa-regular fa-user"></i>
                     <button class="login">Login</button>
                 </div>
                 <button class="carrinho">Carrinho</button>
