feat: removendo a página de revendedor, temporariamente.

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -11,17 +11,14 @@
 <body>
    <header>
       <div id="container__header">
-         <div class="logo__car__login">
+         <div class="logo__login">
             <a id="a-logo" href="#">
                <img class="logo" src="/src/assets/images/logo.PNG" alt="Logo marca sorvete fitness">
            </a>
-           <div id="car-login">
-               <div>
+               <div class="login">
                    <i class="fa-regular fa-user"></i>
-                   <button class="login">Login</button>
-               </div>
-               <button class="carrinho">Carrinho</button>
-           </div>            
+                   <button class="login__button">Login</button>
+               </div>            
          </div>
       </div>
   </header>
