--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -12,13 +12,13 @@
    <header>
       <div id="container__header">
          <div class="logo__login">
-            <a id="a-logo" href="#">
+            <a id="a-logo" href="/index.html">
                <img class="logo" src="/src/assets/images/logo.PNG" alt="Logo marca sorvete fitness">
            </a>
-               <div class="login">
+               <a class="login" href="/src/pages/login/login.html">
                    <i class="fa-regular fa-user"></i>
                    <button class="login__button">Login</button>
-               </div>            
+               </a>            
          </div>
       </div>
   </header>
