--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css">
     <script src="main.js" defer></script>
     <title>Sorvete Fitness</title>
 </head>
@@ -22,7 +22,9 @@
                     <i class="fa-regular fa-user"></i>
                     <button class="login">Login</button>
                 </a>
-                <button class="carrinho">Carrinho</button>
+               <a href="#">
+                 <i class="fa fa-shopping-cart" aria-hidden="true">
+               </i></a>               
             </div>            
         </div>
     </header>
