--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </a>
             <div id="search">
                 <input type="text" id="ice_cream" name="ice_cream" placeholder="Encontre o seu sorvete aqui...">
+                <button id="btn__buscar"></button>
             </div>
             <div id="car-login">
                 <a href="/src/pages/login/login.html">
@@ -31,7 +32,7 @@
     <main>
         <section id="main__img">
             <img id="img__sorvetes" src="./src/assets/images/img_sorvetes.svg" alt="Imagem de sorvetes de sabores variados">
-            <p class="motivation__msg">Venha degustar um sorvete fit para alegrar o seu dia!</p>
+            <p class="motivation__msg">Sorvete Fitness. Mais sabor, mais saúde. Deguste seu dia! </p>
         </section>
         <section id="section__products">
             <ul id="products__presentation">
