:feat: Inclusão de imagem da lupa no campo de pesquisa.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
             </a>
             <div id="search">
                 <input type="text" id="ice_cream" name="ice_cream" placeholder="Encontre o seu sorvete aqui...">
-                <button id="btn__buscar"></button>
+                <div id="btn__buscar" >
+                    <button id="btn" type="submit">
+                        <img id="img" src="./src/assets/images/lupa.png" alt="">
+                    </button>
+                </div>
             </div>
             <div id="car-login">
                 <a href="/src/pages/login/login.html">
                     <i class="fa-regular fa-user"></i>
-                    <button class="login">Login</button>
+                    <button class="login">Login</button>                    
                 </a>
                <a href="#">
                  <i class="fa fa-shopping-cart" aria-hidden="true">
@@ -32,7 +36,7 @@
     <main>
         <section id="main__img">
             <img id="img__sorvetes" src="./src/assets/images/img_sorvetes.svg" alt="Imagem de sorvetes de sabores variados">
-            <p class="motivation__msg">Sorvete Fitness. Mais sabor, mais saúde. Deguste seu dia! </p>
+            <p class="motivation__msg">Mais sabor, mais saúde. Deguste seu dia! </p>
         </section>
         <section id="section__products">
             <ul id="products__presentation">
