:feat: Criação da página 'sobre' e alteração do footer das páginas já criadas.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section id="main__img">
             <img id="img__sorvetes" src="./src/assets/images/img_sorvetes.svg" alt="Imagem de sorvetes de sabores variados">
-            <p class="motivation__msg">Mais sabor, mais saúde. Deguste seu dia! </p>
+            <p class="motivation__msg">Mais sabor, mais saúde. Deguste seu dia.</p>
         </section>
         <section id="section__products">
             <ul id="products__presentation">
@@ -114,18 +114,6 @@
             </div>
 
             <div id="container__footer">
-                <div id="container__description">
-                    <h2 class="about__sorvete__fitness">Sobre a Sorvete Fitness</h2>
-                    <p class="descrition__about__sorvete__fitness">
-                        ©Sorvete Fitness é uma marca que se destaca por oferecer uma variedade de sorvetes saudáveis e nutritivos, projetados especialmente para pessoas que buscam manter um estilo de vida ativo e saudável. Ao contrário dos sorvetes convencionais, que muitas vezes são carregados de açúcar e gorduras saturadas, os sorvetes da Sorvete Fitness são formulados com ingredientes naturais e nutritivos.
-
-                        Esses sorvetes são cuidadosamente elaborados com ingredientes como purê de frutas brasileiras, goma agar-agar (um espessante natural), cacau em pó e outros ingredientes saudáveis. Eles são especialmente formulados para atender às necessidades de pessoas com restrições alimentares, como diabetes ou colesterol alto, além de serem uma excelente opção para aqueles que praticam exercícios físicos regularmente e seguem uma dieta balanceada.
-                        
-                        Além disso, a Sorvete Fitness se destaca por oferecer uma ampla variedade de sabores deliciosos, garantindo que haja uma opção para todos os gostos. Desde os clássicos sabores de frutas até combinações mais exóticas, os sorvetes da Sorvete Fitness proporcionam uma experiência refrescante e satisfatória, sem comprometer a saúde.
-                        
-                        Com um compromisso com a qualidade, a inovação e a saúde, a Sorvete Fitness se tornou uma marca reconhecida e confiável no mercado de sorvetes saudáveis, proporcionando aos seus clientes uma maneira deliciosa de manter um estilo de vida equilibrado e ativo.
-                    </p>
-                </div>
                 <p id="copyright">
                     © Copyright 2024. Todos os direitos reservados. Sorvete Fitness Comércio Eletrônico LTDA
                     32.143.933/0002-05<br> Avenida do Sorriso, 145 Bairro do Sabor Alegre 
