--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
                     <i class="fa-regular fa-user"></i>
                     <button class="login">Login</button>                    
                 </a>
-               <a href="#">
+               <a onclick="openModal()" href="#">
                  <i class="fa fa-shopping-cart" aria-hidden="true">
-               </i></a>               
+               </i></a>
+               <div class="modal__shop">
+
+               </div>
             </div>            
         </div>
     </header>
@@ -40,50 +43,10 @@
         </section>
         <section id="section__products">
             <ul id="products__presentation">
-                <li class="ice__cream__product">
-                    <img class="ice__cream__img" src="./src/assets/images/morango_sorvete.svg" alt="sorvete de morango">
-                    <a class="more__information" href="#" target="_blank">Saiba mais</a>
-                </li>
-                <li class="ice__cream__product">
-                    <img class="ice__cream__img" src="./src/assets/images/chocolate_sorvete.svg" alt="sorvete de chocolate">
-                    <a class="more__information" href="#" target="_blank">Saiba mais</a>
-                </li>
-                <li class="ice__cream__product">
-                    <img class="ice__cream__img" src="./src/assets/images/banana_sorvete.svg" alt="sorvete de banana">
-                    <a class="more__information" href="#" target="_blank">Saiba mais</a>
-                </li>
-                <li class="ice__cream__product">
-                    <img class="ice__cream__img" src="./src/assets/images/manga_sorvete.svg" alt="sorvete de manga">
-                    <a class="more__information" href="#" target="_blank">Saiba mais</a>
-                </li>
+                
             </ul>
 
-                <ul id="list__cart__produts">
-                    <li class="cart__product">
-                        <img class="list__cart__produts__img" class="cart__img" src="./src/assets/images/morango_sorvete.svg" alt="Sorvete de morango">
-                        <p class="title">Sorvete de Morango | 100g</p>
-                        <p class="price">R$<span> 20,99</span></p>
-                        <button class="add__car">Adicionar ao carrinho</button>
-                    </li>
-                    <li class="cart__product">
-                        <img class="list__cart__produts__img" class="cart__img" src="./src/assets/images/chocolate_sorvete.svg" alt="Sorvete de Chocolate">
-                        <p class="title">Sorvete de Chocolate | 100g</p>
-                        <p class="price">R$<span> 18,99</span></p>
-                        <button class="add__car">Adicionar ao carrinho</button>
-                    </li>
-                    <li class="cart__product">
-                        <img class="list__cart__produts__img" class="cart__img" src="./src/assets/images/banana_sorvete.svg" alt="Sorvete de Banana">
-                        <p class="title">Sorvete de Banana | 100g</p>
-                        <p class="price">R$<span> 15,90</span></p>
-                        <button class="add__car">Adicionar ao carrinho</button>
-                    </li>
-                    <li class="cart__product">
-                        <img class="list__cart__produts__img" class="cart__img" src="./src/assets/images/manga_sorvete.svg" alt="Sorvete de Manga">
-                        <p class="title">Sorvete de Manga | 100g</p>
-                        <p class="price">R$<span> 17,90</span></p>
-                        <button class="add__car">Adicionar ao carrinho</button>
-                    </li>
-                </ul>
+                
 
             <figure id="fig__img__people">                       
                 <img id="motivation__img" src="./src/assets/images/img_motivacional.svg" alt="Imagem de pessoa feliz tomando um sorvete">
