--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </div>
             </div>
             <div id="car-login">
+                <a id="sobre" href="./src/pages/sobre/sobre.html">Sobre</a>
                 <a href="/src/pages/login/login.html">
                     <i class="fa-regular fa-user"></i>
                     <button class="login">Login</button>                    
