--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div id="car-login">
                 <a id="sobre" href="./src/pages/about/about.html">Sobre</a>
-                <a href="/src/pages/login/login.html">
+                <a href="./src/pages/login/login.html">
                     <i class="fa-regular fa-user"></i>
                     <button class="login">Login</button>                    
                 </a>
