--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="main.js" defer></script>
+    <script src="/main.js" defer></script>
     <title>Sorvete Fitness</title>
 </head>
 <body>
@@ -28,22 +28,20 @@
             <div id="custom__login--registerForm">                        
                <form id="registration" action="" method="post" name="dwfrm_profile" novalidate="">
                   <div class="form-group required">
-                     <label class="form-control-label" for="registration-form-email">
+                     <label class="form-control-label" for="registration__form__email">
                         Email
                      </label> 
-                     <input type="text" class="form-control" id="registration-form-email" data-missing-error="Este campo é obrigatorio" 
-                              data-pattern-mismatch="Por favor inserir um endereço de e-mail válido" data-range-error="Deve conter 50 caracteres ou menos" 
-                              aria-describedby="form-email-error" name="dwfrm_profile_customer_email" required="" aria-required="true" value="" maxlength="50" 
-                              pattern="^[\w.%+-]+@[\w.-]+\.[\w]{2,6}$">
-                     <div id="form-email-error" class="invalid-feedback"></div>                                                          
+                     <input type="text" class="form-control" id="registration__form__email"
+                            name="email" required="" aria-required="true" value="" maxlength="50" pattern="^[\w.%+-]+@[\w.-]+\.[\w]{2,6}$">
+                     <div id="form-email-error" class="invalid-feedback">
+
+                     </div>                                                          
                   </div>
                   <div class="form-group required">
-                     <label class="form-control-label" for="registration-form-password">
+                     <label class="form-control-label" for="registration__form__password">
                         Senha
                      </label> 
-                     <input type="password" class="form-control" id="registration-form-password" data-missing-error="Este campo é obrigatorio" 
-                              data-range-error="Este campo precisa de 8 a 255 caracteres" aria-describedby="form-password-error" 
-                              autocomplete="off" name="dwfrm_profile_login_password" required="" aria-required="true" value="" maxlength="255" minlength="8">
+                     <input type="password" class="form-control" id="registration__form__password" name="dwfrm_profile_login_password" required="" aria-required="true" value="" maxlength="255" minlength="8">
                      <div id="form-email-password" class="invalid-feedback"></div>                                                          
                   </div>                                            
                   <button id="button__login" type="submit">
